More Changes for course-enrollment--prereqisite -Completed courses